# life

./: CMakeLists.txt
src/: core.cpp  core.h  entity.cpp  entity.h  friendly.cpp  friendly.h  guiEntity.cpp  guiEntity.h  guiMenu.cpp  guiMenu.h  hostil.cpp  hostil.h  main.cpp
